# Bot-Alerts

./: .gitignore  Fsmstate.py  README.md  README_RU.md  checking_updates.py  createbd.py  main.py  pyproject.toml  secretcode.py  test.html  user_interface.py
back/: __init__.py  anime_parsing.py  data_url_headers.py  models.py  the_form.py
backend/: __init__.py
backend/accessories/: __init__.py  config_for_the_forms.py  the_forms.py
backend/parsing_titles/: __init__.py  schemas.py  url_headers.py
dataBase/: __init__.py  config_bd.py  models.py  ormka.py
dataBase/configuration/: __init__.py  abstractions.py  config_bd.py  db.py  property_class.py
dataBase/models/: models.py
dataBase/orm_database/: orm_sqlalchemy.py
dataBase/schemas/: __init__.py  genres.py
keyboards/: __init__.py  inline_auto_keyboard.py  inline_back_keyboard.py  inline_bd.py  pagination.py  text_kb.py
other/: __init__.py  checking_updates.py  config.py
user_interface/: __init__.py  user_interface.py
user_interface/configuration_interface/: Fsmstate.py  __init__.py  text_to_user.py
